--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/AnnaLangner/ProfilSoftwar_frontend_task#readme",
   "dependencies": {
+    "bootstrap-icons": "^1.0.0-alpha5",
     "typescript": "^3.9.7"
   }
 }
