--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register tests/**/test.ts"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,12 @@
   "dependencies": {
     "bootstrap-icons": "^1.0.0-alpha5",
     "typescript": "^3.9.7"
+  },
+  "devDependencies": {
+    "@types/mocha": "^8.0.1",
+    "@types/node": "^14.0.27",
+    "mocha": "^8.1.1",
+    "ts-node": "^8.10.2",
+    "typings": "^2.1.1"
   }
 }
