--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/AnnaLangner/ProfilSoftwar_frontend_task#readme",
   "dependencies": {
     "bootstrap-icons": "^1.0.0-alpha5",
+    "common-js": "^0.3.8",
     "connect": "^3.7.0",
     "serve-static": "^1.14.1",
     "typescript": "^3.9.7"
