--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "init": "npm install && npx tsc",
-    "start": "node src/server.ts",
-    "test": "mocha -r ts-node/register tests/**/test.ts"
+    "start": "npx tsc && node src/server.ts",
+    "test": "env TS_NODE_COMPILER_OPTIONS={'module':'commonjs'} npx tsc && mocha tests/**/*.js"
   },
   "repository": {
     "type": "git",
