--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "init": "npm install && npx tsc",
-    "start": "npx tsc && node src/server.ts",
-    "test": "env TS_NODE_COMPILER_OPTIONS={'module':'commonjs'} npx tsc && mocha tests/**/*.js"
+    "start": "npx tsc && http-server -o src/index.html",
+    "test": "npx tsc && mocha tests/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -22,13 +23,13 @@
   "dependencies": {
     "bootstrap-icons": "^1.0.0-alpha5",
     "common-js": "^0.3.8",
-    "connect": "^3.7.0",
-    "serve-static": "^1.14.1",
+    "http-server": "^0.12.3",
     "typescript": "^3.9.7"
   },
   "devDependencies": {
     "@types/mocha": "^8.0.1",
     "@types/node": "^14.0.27",
+    "@types/serve-static": "^1.13.5",
     "mocha": "^8.1.1",
     "ts-node": "^8.10.2",
     "typings": "^2.1.1"
