--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "esModuleInterop": true,
     "types": [ "node", "mocha" ],
     "typeRoots": [
       "./node_modules/@types"
